fix if an item should overflow in select menu

--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,7 @@ main {
   display: block;
   box-shadow: 1px 0 0 0 rgba(255, 255, 255, 0.1), inset -1px 0 0 0 rgba(0, 0, 0, 0.7);
   overflow-y: auto;
+  word-wrap: break-word;
 }
 
 #frame {
